[package]
name = "pythnet-sdk"
version = "2.3.1"
description = "Pyth Runtime for Solana"
authors = ["Pyth Data Association"]
repository = "https://github.com/pyth-network/pythnet"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "pythnet_sdk"

[features]
test-utils = ["dep:wormhole-vaas-serde", "dep:serde_wormhole", "dep:libsecp256k1", "dep:rand"]
solana-program = ["dep:solana-program", "dep:anchor-lang"]

[dependencies]
bincode = "1.3.1"
borsh = "0.10.3"
bytemuck = { version = "1.11.0", features = ["derive"] }
byteorder = "1.4.3"
fast-math = "0.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"], optional = true }
quickcheck = { version = "1", optional = true}
sha3 = "0.10.4"
slow_primes = "0.1.14"
thiserror = "1.0.40"
pyth-sdk = { version = "0.5.0" }

serde_wormhole = {version ="0.1.0", optional = true}
wormhole-vaas-serde = {version = "0.1.0", optional = true}
libsecp256k1 = {version ="0.7.1", optional = true}
rand = {version = "0.8.5", optional = true}
solana-program = {version = ">=1.13.6", optional = true}
anchor-lang  = {version = ">=0.28.0", optional = true}

[dev-dependencies]
base64 = "0.21.0"
rand = "0.7.0"
serde_json = "1.0.96"
solana-client = ">=1.13.6"
solana-sdk = ">=1.13.6"
proptest = "1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
