[workspace]
members = ["contracts/pyth", "sdk/rust"]
exclude = ["examples/cw-contract"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
cw20-wrapped-2 = { git = "https://github.com/wormhole-foundation/wormhole", rev = "a2cb2a1226d00bada5679dc34f9d4393c9b0795d"}
