[workspace]
resolver = "2"
members = ["programs/*", "cli/", "program_simulator/", "common_test_utils", "crates/*"]
exclude = [
    "programs/pyth-price-store",
    "pyth_solana_receiver_sdk",
] # pyth_solana_receiver_sdk is excluded because it uses a later anchor-lang version than the contract

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
borsh = "0.9.3"
byteorder = "1.4.3"
wormhole-core-bridge-solana = { path = "./programs/core-bridge" }
wormhole-vaas-serde = "0.1.0"
wormhole-raw-vaas = { version = "0.1.3", features = [
    "ruint",
    "on-chain",
], default-features = false }
serde_wormhole = "0.1.0"
anchor-lang = "0.28.0"
anchor-client = "0.28.0"
wormhole-io = "0.1.0"
cfg-if = "1.0"
hex = "0.4.3"
ruint = "1.9.0"
solana-program = "1.16.20"
solana-program-test = "1.16.20"
solana-sdk = "1.16.20"
solana-client = "1.16.20"
tokio = "1.14.1"
wormhole-solana = { path = "./crates/wormhole-solana" }

[patch.crates-io]
pythnet-sdk = { path = "../../pythnet/pythnet_sdk" } # Avoid clashing modules, use the local pythnet_sdk instead of the one from crates.io, (which is brought in by `pyth-solana-receiver-sdk==0.6.1`)
