[workspace]
resolver = "2"
members = ["programs/*", "cli/", "program_simulator/", "common_test_utils", "crates/*"]
exclude = [
    "programs/pyth-price-store",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
borsh = "0.10.4"
bincode = "1.3.3"
byteorder = "1.4.3"
pyth-solana-receiver-sdk = { path = "./pyth_solana_receiver_sdk" }
pythnet-sdk = { path = "../../pythnet/pythnet_sdk", version = "2.3.1" }
wormhole-core-bridge-solana = { path = "./programs/core-bridge" }
wormhole-vaas-serde = "0.1.0"
wormhole-raw-vaas = { version = "0.1.3", features = [
    "ruint",
    "on-chain",
], default-features = false }
serde_wormhole = "0.1.0"
anchor-lang = "0.32.1"
anchor-client = "0.32.1"
wormhole-io = "0.1.0"
cfg-if = "1.0"
hex = "0.4.3"
ruint = "1.9.0"
solana-client = "2"
solana-compute-budget-interface = "2"
solana-program = "2"
solana-program-test = "2"
solana-sdk = "2"
solana-sdk-ids = "2"
solana-system-interface = "1"
tokio = "1.14.1"
wormhole-solana = { path = "./crates/wormhole-solana" }
