[workspace]
resolver = "2"
members = ["programs/*", "cli/", "program_simulator/", "common_test_utils", "crates/*"]
exclude = [
    "programs/pyth-price-store",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
borsh = "1.5.3"
bincode = "1.3.3"
byteorder = "1.4.3"
pyth-solana-receiver = { path = "./programs/pyth-solana-receiver", features = ["no-entrypoint"] }
pyth-solana-receiver-sdk = { path = "./pyth_solana_receiver_sdk" }
pythnet-sdk = { path = "../../pythnet/pythnet_sdk", version = "3.0.0" }
wormhole-core-bridge-solana = { path = "./programs/core-bridge", features = ["no-entrypoint"] }
wormhole-vaas-serde = "0.1.0"
wormhole-raw-vaas = { version = "0.1.3", features = [
    "ruint",
    "on-chain",
], default-features = false }
serde_wormhole = "0.1.0"
anchor-lang = "1.0.2"
anchor-client = "1.0.2"
wormhole-io = "0.1.0"
cfg-if = "1.0"
hex = "0.4.3"
ruint = "1.9.0"
solana-client = "3.1"
solana-commitment-config = "3.1"
solana-compute-budget-interface = "3"
solana-program = "3"
solana-program-test = {version = "3", features = ["agave-unstable-api"]}
solana-sdk = "3"
solana-sdk-ids = "3"
solana-system-interface = "2"
tokio = "1.14.1"
wormhole-solana = { path = "./crates/wormhole-solana" }
