[workspace]
members = [
    "contracts/wormhole",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"
version = "0.1.0"

[workspace.dependencies]
stylus-sdk = { version = "0.9.0", default-features = false, features = [] }
alloy-primitives = { version = "0.8.20", default-features = false, features = [] }
mini-alloc = { version = "0.9.0", default-features = false }
motsu = "0.1.0"
stylus-test = "0.9.0"




[profile.release]
opt-level = "z"           # Optimize for size instead of speed
lto = "fat"              # More aggressive link-time optimization
codegen-units = 1        # Better optimization (slower build, smaller binary)
panic = "abort"          # Smaller panic handling
strip = "symbols"        # Strip symbols for smaller binary
overflow-checks = false  # Disable overflow checks for size
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation for better optimization
rpath = false            # Disable rpath for smaller binary

[profile.release.package."*"]
opt-level = "z"           # Force size optimization for all dependencies
