[workspace]
members = [
    "contracts/wormhole",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"
version = "0.1.0"

[workspace.dependencies]
stylus-sdk = { version = "0.9.0", default-features = false }
alloy-primitives = { version = "0.8.20", default-features = false }
mini-alloc = { version = "0.9.0", default-features = false }
stylus-test = "0.9.0"

k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "s"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[profile.release.package."*"]
opt-level = "z"           # Force size optimization for all dependencies

[profile.release.package.k256]
opt-level = "z"
strip = "symbols"

[profile.release.package.alloy-primitives]
opt-level = "z"
strip = "symbols"
