[package]
name = "pyth-wormhole-attester-client"
version = "5.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyth_wormhole_attester_client"

[[bin]]
name = "pwhac"
path = "src/main.rs"


[features]
default = ["pyth-wormhole-attester/client", "wormhole-bridge-solana/client", "pyth-wormhole-attester/trace"]

[dependencies]
borsh = "=0.9.3"
clap = {version = "3.1.18", features = ["derive"]}
env_logger = "0.8.4"
log = "0.4.14"
wormhole-bridge-solana = {git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.14.8"}
pyth-wormhole-attester = {path = "../program"}
pyth-wormhole-attester-sdk = { path = "../sdk/rust", features=["solana"] }
pyth-sdk-solana = "0.6.1"
serde = "1"
serde_yaml = "0.8"
shellexpand = "2.1.0"
solana-client = "=1.10.31"
solana-program = "=1.10.31"
solana-sdk = "=1.10.31"
solana-transaction-status = "=1.10.31"
solitaire = {git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.14.8"}
tokio = {version = "1", features = ["sync", "rt-multi-thread", "time"]}
futures = "0.3.21"
sha3 = "0.10.6"
generic-array = "0.14.6"
lazy_static = "1.4.0"
prometheus = "0.13.3"
warp = "0.3.3"
http = "0.2.8"

[dev-dependencies]
solana-program-test = "=1.10.31"
solana-sdk = "=1.10.31"
serial_test = "1.0.0"
