[package]
name = "pyth-wormhole-attester-governance"
version = "0.1.0"
description = "CLI to generate governance payloads for the attester"
edition = "2018"

[dependencies]
anyhow = "1.0.65"
clap = {version = "3.1.18", features = ["derive"]}
solana-sdk = "=1.10.31"
pyth-wormhole-attester-client = {path = "../client/"}
hex = "0.4.3"
remote-executor = {path = "../../governance/remote_executor/programs/remote-executor/"}
borsh = "0.9.3"
