[package]
name = "pyth-wormhole-attester"
version = "1.0.0"
description = "Pyth-over-Wormhole Solana contract"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth_wormhole_attester"

[features]
default = ["wormhole-bridge-solana/no-entrypoint"]
client = ["solitaire/client", "no-entrypoint"]
trace = ["solitaire/trace", "wormhole-bridge-solana/trace"]
no-entrypoint = []

[dependencies]
wormhole-bridge-solana = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.14.8" }
solitaire = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.14.8"}
rocksalt = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.14.8"}
solana-program = "=1.10.31"
borsh = "=0.9.3"
pyth-client = "0.2.2"
pyth-wormhole-attester-sdk = { path = "../sdk/rust", features = ["solana"] }
serde = { version = "1", optional = true}
serde_derive = { version = "1", optional = true}
serde_json = { version = "1", optional = true}
pyth-sdk-solana = { version = "0.5.0" }
