[package]
name = "bulk-trade-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tools for Bulk Trade pusher (monitor, key management)"

[[bin]]
name = "bulk-trade-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
bulk-keychain = "0.1"

[lints]
workspace = true
